src/document.scss
@import '../libs/_viz-color.scss';
a {
  text-decoration: none;
}
.doc-category-title {
  /* Form Controls: */
  font-family: Soleto;
  font-weight: 400;
  font-size: 12px;
  color: #9f9f9f;
  letter-spacing: 0.2px;
  text-align: left;
  line-height: 16px;
}
.doc-title-1 {
  /* Checkbox: */
  font-family: Soleto;
  font-weight: 300;
  font-size: 48px;
  color: #000000;
  letter-spacing: 0;
  margin-bottom: 24px;
}
.doc-desc-1 {
  /* Checkboxes allow the: */
  font-family: Soleto;
  font-weight: 300;
  font-size: 20px;
  color: #696969;
  letter-spacing: 0;
  line-height: 30px;
}
.doc-divider {
  height: 1px;
  /* Divider: */
  background: #f1f1f1;
  margin: 48px 0px;
}
.doc-title-2 {
  /* Examples: */
  font-family: Soleto;
  font-weight: 300;
  font-size: 28px;
  color: #28292b;
  letter-spacing: 0;
  margin-bottom: 16px;
  height: 34px;
  line-height:34px;
}
.doc-desc-2 {
  /* Use in forms to togg: */
  font-family: Soleto;
  font-weight: 300;
  font-size: 16px;
  color: #696969;
  letter-spacing: 0;
  line-height: 24px;
  margin-bottom: 24px;
}
.doc-desc-2-highlight {
  /* Rectangle: */
  background: #f3f3f3;
  // padding-right: 44px;
}
.doc-desc-2-highlight-text {
  // color: #ff4e00;
  color: $viz-purple
}
.doc-title-3 {
  /* Headlines: */
  font-weight: 300;
  font-size: 18px;
  color: #000000;
  text-align: left;
  line-height: 30px;
  height: 30px;
  margin-bottom: 8px;
}
.doc-example-container {
  /* Rectangle 3: */
  background: #ffffff;
  // border: 1px solid #efefef;
  // height: 280px;
  margin-bottom: 32px;
}
.doc-props-table {
  width: 100%;
  border-collapse: collapse;
  thead {
    background-color: #f8f8f8;
  }
  tbody {
    background-color: #ffffff;
  }
  tr {
    border: 1px solid #efefef;
  }
  th {
    /* Property: */
    font-family: Soleto;
    font-weight: 700;
    font-size: 11px;
    color: #9f9f9f;
    letter-spacing: 1.65px;
    line-height: 15px;
    text-transform: uppercase;
    text-align: left;
    padding: 20px 24px;
  }
  td {
    /* disabled state of ch: */
    font-family: Soleto;
    font-weight: 300;
    font-size: 16px;
    color: #696969;
    padding: 18px 24px;
  }
}
.doc-list {
  li {
    margin-bottom: 24px;
  }
}
.doc-list-bold {
  // /* • Logical: Trees sho: */
  font-family: Soleto;
  font-weight: 700;
  font-size: 16px;
  color: #696969;
  letter-spacing: 0;
  line-height: 24px;
}
.doc-spec {
  height: 280px;
  width: 800px;
}

//spec
.doc-spec {
  height: 280px;
  // width: 800px;
  width: 100%;
}
.datepicker-spec {
  height: 635px;
  width: 800px;
}
.expansionpanel-spec {
  height: 369px;
  width: 800px;
}

//css for guide line and usage

.docs-usage-w50 {
  display: inline-block;
  overflow: hidden;
  width: calc(50% - 5px - 12px);
  &:nth-child(2) {
    margin-left: 24px;
  }
}
.docs-usage-w100 {
  width: 100%;
}
.docs-usage-center {
  img {
    // max-height: 100%;
    max-width: 100%;
    width: auto;
    height: auto;
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    margin: auto;
    transform: scale(0.5);
  }
}
.docs-usage-center-no-scale {
  position: relative;
  & > * {
    position: absolute;
    left: 50%;
    top: 50%;
    transform: translate(-50%,-50%);
  }
}
.docs-usage-spec {
  position: relative;
  width: 100%;
  background-color: #fafafa;
}
.docs-usage-do {
  position: relative;
  background-color: #fafafa;
  overflow: hidden;
  &::before {
    content: ' ';
    position: absolute;
    height: 100%;
    width: 5px;
    background-color: #4caf4f;
  }
}
.docs-usage-dont {
  position: relative;
  background-color: #fafafa;
  overflow: hidden;
  &::before {
    content: ' ';
    position: absolute;
    height: 100%;
    width: 5px;
    background-color: #ff3333;
  }
}
.docs-usage-warn {
  position: relative;
  background-color: #fafafa;
  overflow: hidden;
  &::before {
    content: ' ';
    position: absolute;
    height: 100%;
    width: 5px;
    background-color: #ffc02e;
  }
}
.checkbox-usage {
  width: 388px;
  height: 160px;
  &:nth-child(2) {
    margin-left: 24px;
  }
}
.datepicker-usage {
  width: 388px;
  height: 291px;
  &:nth-child(2) {
    margin-left: 24px;
  }
}
.expansionpanel-usage {
  width: 800px;
  height: 352px;
  &:nth-child(2) {
    margin-top: 24px;
  }
}
.guideline-pic-w100 {
  width: 800px;
  height: 160px;
}
.guideline-pic-w50 {
  width: 388px;
  height: 160px;
}
.docs-guideline-group {
  margin-bottom: 32px;
}
.docs-mt32 {
  margin-top: 32px;
}
.docs-mb32 {
  margin-bottom: 32px;
}
.docs-mt24 {
  margin-top: 24px;
}
.docs-ml24 {
  margin-left: 24px;
}
.docs-mr24 {
  margin-right: 24px;
}
.docs-mb24 {
  margin-bottom: 24px;
}
.docs-mt16 {
  margin-top: 16px;
}
.docs-mb16 {
  margin-bottom: 16px;
}
.doc-bold-title {
  font-size: 16px;
  font-weight: bold;
  margin-bottom: 15px;
  color: #000000;
}
.doc-code-sec {
  margin: 0 0 30px 0;
  background-color: #f8f8f8;
  border: 1px solid #efefef;
  padding: 16px 20px;
  min-height: 64px;
  line-height: 30px;
  box-sizing: border-box;
  font-size: 16px;
  font-weight: 300;
  font-family: Soleto;
}
.docs-more-example {
  cursor: pointer;
  font-weight: 400;
  font-size: 14px;
  color: #7f5eba;
  text-align: left;
  line-height: 18px;
  margin-left: 24px;
}
#exampleWrapper {
  display: block;
}

.hide-document {
  height: 0px;
  visibility: hidden;
}


.doc-fl {
  float: left;
}
.doc-color-containers-wrapper {
  margin-bottom: -24px;
}
.doc-color-container {
  display: inline-block;
  width: 350px;
  font-size: 16px;
  color: #000000;
  font-weight: 300;
  vertical-align:top;
}

.doc-color-block {
  height: 50px;
  position: relative;
  padding: 13px 24px;
  box-sizing: border-box;
}
.doc-color-border-top {
  -webkit-backface-visibility: hidden;
  -moz-backface-visibility: hidden;
  -webkit-transform: translate3d(0, 0, 0);
  -moz-transform: translate3d(0, 0, 0);
  overflow: hidden;
  border-radius: 5px 5px 0 0;
}
.doc-color-border-bottom {
  -webkit-backface-visibility: hidden;
  -moz-backface-visibility: hidden;
  -webkit-transform: translate3d(0, 0, 0);
  -moz-transform: translate3d(0, 0, 0);
  overflow: hidden;
  border-radius: 0 0 5px 5px;
}
.doc-color-primary {
  position: relative;
  height: 60px;
  padding: 18px 24px;
  box-sizing: border-box;
}
.doc-color-text-color-black {
  color: #000000;
}
.doc-color-text-color-white {
  color: #ffffff;
}
.doc-color-level1 {
  opacity: 0.04;
}
.doc-color-level2 {
  opacity: 0.12;
}
.doc-color-level3 {
  opacity: 0.16;
}
.doc-color-name {
  text-align: left;
  line-height: 24px;
}
.doc-color-opacity {
  float: right;
  text-align: right;
  line-height: 24px;
}
.doc-color-background {
  position: absolute;
  top: 0px;
  left: 0px;
  height: 100%;
  width: 100%;
  z-index: -1;
}
.doc-color-purple {
  background-color: $viz-purple;
}
.doc-color-orange {
  background-color: $viz-orange;
}
.doc-color {
  &-blue {
    background-color: $viz-blue;
  }
  &-yellow {
    background-color: $viz-yellow;
  }
  &-green {
    background-color: $viz-green;
  }
  &-gray {
    background-color: $viz-gray;
  }
  &-black {
    background-color: $viz-black;
  }
  &-chart-teal {
    background-color: $chart-teal;
  }
  &-chart-purple {
    background-color: $chart-purple;
  }
  &-chart-orange {
    background-color: $chart-orange;
  }
  &-chart-blue {
    background-color: $chart-blue;
  }
  &-chart-green {
    background-color: $chart-green;
  }
  &-chart-pink {
    background-color: $chart-pink;
  }
  &-chart-yellow {
    background-color: $chart-yellow;
  }
  &-chart-red {
    background-color: $chart-red;
  }
  &-dark-gray {
    background-color: $viz-dark-gray;
  }
  &-light-gray {
    background-color: $viz-light-gray;
  }
  &-extra-light-gray {
    background-color: $viz-extra-light-gray;
  }
  &-gray-special-1 {
    background-color: #f1f1f1;
  }
  &-gray-special-2 {
    background-color: #fafafa;
  }
}
.doc-color-strip-wrapper {
  margin-bottom: -24px;
}
.doc-download-link {
  cursor: pointer;
  margin-bottom: 16px;
  font-size: 16px;
  display:inline-block;
  color: $viz-purple;
  font-weight: 300;
  z-index: 1;
}
.doc-color-strip {
  border-radius: 5px;
  height: 60px;
  padding: 18px 24px;
  width: 350px;
  display: inline-block;
  box-sizing: border-box;
  vertical-align:top;
  
  span {
    font-size: 16px;
    line-height: 24px;
    text-align: left;
    font-weight: 300;
    &:nth-child(2) {
      text-align: right;
      float: right;
    }
  }
}
.template-live-link {
  color: #ffffff;
  width: 150px;
  height: 36px;
  background-color: $viz-purple;
  line-height: 36px;
  font-size: 14px;
  border-radius: 2px;
  display: inline-block;
  text-align: center;
  font-weight: 300;
}

.oktajs-code {
  overflow: auto;
}

